<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Muzima</string>
    <string name="app_version">0.1.0</string>
    <string name="auth">App Login</string>
    <string name="cancel">Cancel</string>
    <string name="change_code">Change Security Code</string>
    <string name="change_password">Change Password</string>
    <string name="change_server">Change URL</string>
    <string name="change_username">Change Username</string>
    <string name="default_info">https://github.com/muzima</string>
    <string name="default_password">test</string>
    <string name="default_server">http://192.168.2.3:8081/openmrs-standalone</string>
    <string name="default_postserver">http://192.168.2.3:8081/openmrs-standalone/ws/rest/v1/muzima/queueData</string>
    <string name="urlField">http://192.168.1.3:8081/openmrs-standalone/ws/rest/v1/muzima/queueData</string>
    <string name="default_username">admin</string>
    <string name="error">Error: %s</string>
    <string name="error_login_code">Error: Incorrect CODE.</string>
    <string name="find_patient">List Patients</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="invalid_name">Invalid patient name. Use [Given Middle Family]</string>
    <string name="list_patients">Patients List</string>
    <string name="no_patients">No patients found. Try refresh patients.</string>
    <string name="no_select_error">Sorry, you have not selected any patients!</string>
    <string name="odk">Muzima</string>
    <string name="openmrs">OpenMRS</string>
    <string name="openmrs_forms">OpenMRS Forms</string>
    <string name="password">Password</string>
    <string name="provider">Provider</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_forms">Refresh Forms</string>
    <string name="search_hint">Name or ID</string>
    <string name="search_patient">Search Patient</string>
    <string name="security_code">Security Code</string>
    <string name="server_url">URL</string>
    <string name="post_url">POST_URL</string>
    <string name="server_preferences">Change Settings</string>
    <string name="show_patient">Show Patient</string>
    <string name="toggle_selected">Toggle All</string>
    <string name="upload_forms">Upload Forms</string>
    <string name="username">Username</string>
    <string name="view_patient">View Patient</string>
    <string name="view_patient_detail">View Observation</string>
    <string name="view_observation">View Observation</string>
    <string name="storage_error">SD card not ready.</string>

    <string-array name="Locationid">
        <item>Reach</item>
        <item>Ampath</item>
        <item>Busia</item>
    </string-array>
    <string-array name="SPUTUMACIDBACILLI">
        <item>THREEPLUS</item>
        <item>ONEPLUS</item>
        <item>TWOPLUS</item>
        <item>NEGATIVE</item>
        <item>POSITIVE</item>
        <item>SCANTY</item>
        <item>CONTAMINATED</item>
    </string-array>
    <string-array name="Appearance">
        <item>Purulent</item>
        <item>Red</item>
        <item>Saliva</item>
        <item>Mucopulurent</item>
    </string-array>
    <string-array name="Provider">
        <item>Win</item>
        <item>Patrick</item>
        <item>Admin</item>
        <item>etc</item>
    </string-array>

    <string name="title_activity_sync_form_data">SyncFormDataActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>